src/components/topicView.css
.topicview-title {
    font-weight: 500;
}

.topicview-author {
    font-weight: 300;
    margin-right: 3px;
}

p {
    font-weight: 300;
}

.topicview-section {
    font-weight: 300;
    color: var(--secondary-font);
}

.topicview-info {
    font-size: 13px;
    color: var(--secondary-font);
}

.topicview-origin-name {
    font-weight: 500;
}

.topicview-runtime {
    font-weight: 300;
}

.topicview-info-aparter {
    width: 1px;
    height: 1px;
    background-color: var(--secondary-font);
    border-radius: 50%;
    margin-left: 4px;
    margin-right: 6px;
}

@media (pointer: fine) {
    .interactionbutton:hover {
        opacity: 60%;
    }
}

